<resources>
    <string name="app_name">University_App</string>
    <string name="no_access">No access! Register please.</string>
    <string name="user_email">USER EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="welcome_to_university_app">Welcome to Roehampton University App</string>
    <string name="leading_message">We produce world-class research that helps us understand the world and change it for the better.Please, register or login to access your university facilities?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login_auth">Login</string>
    <string name="loginOrEmail">User Email</string>
    <string name="login_inputError">Error, incorrect account details</string>
    <string name="contact_us">Contact us</string>
    <string name="check_your_profile">Check your profile</string>
    <string name="name_surname">Name Surname</string>
    <string name="timetable">Timetable</string>
    <string name="check_your_timetable">Check your timetable</string>
    <string name="floor_plan">Floor plan</string>
    <string name="check_the_floor_plan">Check the floor plan</string>
    <string name="roehampton_com">Roehampton.com</string>
    <string name="open_you_dashboardin_browser">Open you Dashboardin browser</string>
    <string name="library">Library</string>
    <string name="check_your_library">Check your library</string>
    <string name="access_to_pc_and_wifi">Access to PC and WIFI</string>
    <string name="check_your_permissions">Check your permissions</string>
    <string name="user_default_image">user default image</string>
    <string name="welcome_to_roehampton_university">Welcome to Roehampton University</string>
    <string name="settings_icon">settings icon</string>
    <string name="email_icon">email icon</string>
    <string name="second_name_icon">second name icon</string>
    <string name="first_name_icon">first name icon</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email_example_com">Email@example.com</string>
    <string name="group">Group</string>
    <string name="phone_number">+442083926000</string>
    <string name="forgotten_pw">If you have lost or forgotten your Roehampton account password or your username please contact the Roehampton IT Helpdesk.</string>
    <string name="requirement">Please, enter your correct group code (IT01, IT02, MA01 or BA01) within a password between eight and sixteen characters!</string>
    <string name="library_message">Our library provides a range of books. Please, enter a book category to see all similar books, reserve a book, see reviews, or cancel your reservation</string>
    <string name="search">Search</string>
    <string name="reserve_the_book">Reserve the book</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="book_isbn">Book ISBN</string>
    <string name="roehampton_library">Roehampton Library</string>
    <string name="go_back_to_library">Go back to library</string>
    <string name="university_name">University of Roehampton</string>
    <string name="timetable_info">The timetable will be updated automatically by the university. Click on the class card to see the floor plan where the class is scheduled.</string>
    <string name="cancel_your_reservation">Cancel your reservation</string>
    <string name="roehampton_news_feed_coming_soon">Roehampton news feed coming soon</string>
    <string name="welcome_to_roehampton_news_channel">Welcome to Roehampton News Channel</string>
    <string name="check_what_s_new">Check what\'s new</string>
    <string name="welcome_to_roehampton_library">Welcome to Roehampton Library</string>
    <string name="reserve">Reserve</string>
    <string name="cancel">cancel</string>
    <string name="check_the_floor_plans">Check the floor plans</string>
</resources>
