<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="290dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">
            <TextView
                android:id="@+id/libraryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/roehampton_library"
                android:textColor="#fff"
                android:textSize="31sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/libraryLogo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/modle_logo"
                app:civ_border_color="#FF000000" />



            <TextView
                android:id="@+id/bookReviewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/book_isbn"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="190dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/addNewReview"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyledark"
                        android:text="Add new Review"
                        android:textColor="#fff" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/goBackLibrary"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyledark"
                        android:text="@string/go_back_to_library"
                        android:textColor="#fff" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleReviews"
        android:layout_width="match_parent"
        android:layout_height="339dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</android.support.constraint.ConstraintLayout>