<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayoutTimetable"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uniName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/university_name"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/uniLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/modle_logo" />

            <TextView
                android:id="@+id/txtTimetableGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="Timetable for group:"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/libraryGroupID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="group ID"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="210dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/goToFloorplan"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyledark"
                        android:text="@string/check_the_floor_plans"
                        android:textColor="#fff" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/checkMoodle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyledark"
                        android:text="Check on Moodle"
                        android:textColor="#fff" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/studentInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/timetable_info"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutTimetable" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvClasses"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentInfoText" />


</android.support.constraint.ConstraintLayout>