<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp">


    <ImageView
        android:id="@+id/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/book_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_collections_bookmark_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardBackground"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/cardview_light_background"
        android:background="@drawable/buttonstyledark"
        android:text="@string/reserve"
        app:layout_constraintBottom_toTopOf="@+id/btnReview"
        app:layout_constraintEnd_toEndOf="@+id/cardBackground" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/cardview_light_background"
        android:background="@drawable/buttonstylepink"
        android:text="@string/cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnReview"
        app:layout_constraintEnd_toEndOf="@+id/cardBackground" />

    <Button
        android:id="@+id/btnReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_follow_style"
        android:text="Reviews"
        app:layout_constraintBottom_toBottomOf="@+id/cardBackground"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/roomClasstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="Title:"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/book_logo"
        app:layout_constraintStart_toStartOf="@+id/cardBackground"
        app:layout_constraintTop_toBottomOf="@+id/editionText" />

    <TextView
        android:id="@+id/roomClass"
        android:layout_width="164dp"
        android:layout_height="73dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Title"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/roomClasstxt"
        app:layout_constraintEnd_toStartOf="@+id/btnReview" />

    <TextView
        android:id="@+id/book_ISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:text="@string/book_isbn"
        android:textColor="@color/profileGrayLight"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardBackground" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:text="name surname"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/authornameText"
        app:layout_constraintTop_toTopOf="@+id/cardBackground" />

    <TextView
        android:id="@+id/subjectClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="4dp"
        android:text="Edition"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/editionText"
        app:layout_constraintTop_toBottomOf="@+id/book_author" />

    <TextView
        android:id="@+id/ISBNtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="ISBN:"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/book_ISBN"
        app:layout_constraintTop_toTopOf="@+id/cardBackground" />

    <TextView
        android:id="@+id/authornameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Author:"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/cardBackground"
        app:layout_constraintTop_toTopOf="@+id/cardBackground" />

    <TextView
        android:id="@+id/editionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Edition:"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subjectClass"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>